tests/lang/compile_fail/ownership_move_param_error.expo
struct Config
  name: String
end

fn consume(move c: Config) -> String
  c.name
end

fn main
  c = Config{name: "test"}
  consume(c)
  print(c.name)
end
